--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 body {
   background-color: var(--main-bg-color);
-
 }
 
 :root {
@@ -23,4 +22,10 @@ body {
 .hr {
   background-color: var(--border-color);
   height: 2px;
+}
+
+.splitpanes--vertical > .splitpanes__splitter {
+  min-width: 5px;
+  margin: 0 0.5rem;
+  background: var(--border-color);
 }
